Config for firebase

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alinazhechkova.github.io/to-do-redux/",
+  "homepage": ".",
   "name": "to-do-redux",
   "version": "0.1.0",
   "private": true,
